--- a/src/main/resources/assets/industriallevel/lang/ru_ru.json
+++ b/src/main/resources/assets/industriallevel/lang/ru_ru.json
@@ -111,7 +111,7 @@
   "item.industriallevel.bronze_helmet": "Бронзовый шлем",
   "item.industriallevel.chlorophyte_boots": "Хлорофитовые ботинки",
   "item.industriallevel.chlorophyte_leggings": "Хлорофитовые поножи",
-  "item.industriallevel.chlorophyte_chestplate": "Хлорофитовая нагрудник",
+  "item.industriallevel.chlorophyte_chestplate": "Хлорофитовый нагрудник",
   "item.industriallevel.chlorophyte_helmet": "Хлорофитовый шлем",
   "item.industriallevel.lead_boots": "Свинцовые ботинки",
   "item.industriallevel.lead_leggings": "Свинцовые поножи",
@@ -123,7 +123,7 @@
   "item.industriallevel.nickel_helmet": "Никелевый шлем",
   "item.industriallevel.osmium_boots": "Осмиевые ботинки",
   "item.industriallevel.osmium_leggings": "Осмиевые поножи",
-  "item.industriallevel.osmium_chestplate": "Осмиевая нагрудник",
+  "item.industriallevel.osmium_chestplate": "Осмиевый нагрудник",
   "item.industriallevel.osmium_helmet": "Осмиевый шлем",
   "item.industriallevel.platinum_boots": "Платиновые ботинки",
   "item.industriallevel.platinum_leggings": "Платиновые поножи",
@@ -141,10 +141,10 @@
   "item.industriallevel.titanium_leggings": "Титановые поножи",
   "item.industriallevel.titanium_chestplate": "Титановый нагрудник",
   "item.industriallevel.titanium_helmet": "Титановый шлем",
-  "item.industriallevel.uranium_boots": "Ураиновые ботинки",
-  "item.industriallevel.uranium_leggings": "Ураиновые поножи",
-  "item.industriallevel.uranium_chestplate": "Ураиновая нагрудник",
-  "item.industriallevel.uranium_helmet": "Ураиновый шлем",
+  "item.industriallevel.uranium_boots": "Урановые ботинки",
+  "item.industriallevel.uranium_leggings": "Урановые поножи",
+  "item.industriallevel.uranium_chestplate": "Урановый нагрудник",
+  "item.industriallevel.uranium_helmet": "Урановый шлем",
   "item.industriallevel.zinc_boots": "Цинковые ботинки",
   "item.industriallevel.zinc_leggings": "Цинковые поножи",
   "item.industriallevel.zinc_chestplate": "Цинковый нагрудник",
