--- a/src/main/resources/assets/industriallevel/lang/ru_ru.json
+++ b/src/main/resources/assets/industriallevel/lang/ru_ru.json
@@ -1,46 +1,35 @@
 {
   "item.industriallevel.titanium_ingot": "Титановый слиток",
-  "item.industriallevel.titanium_stick": "Титановая палка",
   "item.industriallevel.titanium_nugget": "Титановый самородок",
   "item.industriallevel.raw_titanium": "Рудный титан",
   "item.industriallevel.chlorophyte_ingot": "Хлорофитовый слиток",
-  "item.industriallevel.chlorophyte_stick": "Хлорофитовая палка",
   "item.industriallevel.chlorophyte_nugget": "Хлорофитовый самородок",
   "item.industriallevel.raw_chlorophyte": "Рудный хлорофит",
   "item.industriallevel.bronze_ingot": "Бронзовый слиток",
-  "item.industriallevel.bronze_stick": "Бронзовая палка",
   "item.industriallevel.bronze_nugget": "Бронзовый самородок",
   "item.industriallevel.raw_bronze": "Рудная бронза",
   "item.industriallevel.nickel_ingot": "Никелевый слиток",
-  "item.industriallevel.nickel_stick": "Никелевая палка",
   "item.industriallevel.nickel_nugget": "Никелевый самородок",
   "item.industriallevel.raw_nickel": "Рудный никель",
   "item.industriallevel.silver_ingot": "Серебряный слиток",
-  "item.industriallevel.silver_stick": "Серебряная палка",
   "item.industriallevel.silver_nugget": "Серебряный самородок",
   "item.industriallevel.raw_silver": "Рудное серебро",
   "item.industriallevel.tin_ingot": "Оловянный слиток",
-  "item.industriallevel.tin_stick": "Оловянная палка",
   "item.industriallevel.tin_nugget": "Оловянный самородок",
   "item.industriallevel.raw_tin": "Рудное олово",
   "item.industriallevel.lead_ingot": "Свинцовый слиток",
-  "item.industriallevel.lead_stick": "Свинцовая палка",
   "item.industriallevel.lead_nugget": "Свинцовый самородок",
   "item.industriallevel.raw_lead": "Рудный свинец",
   "item.industriallevel.osmium_ingot": "Осмиевый слиток",
-  "item.industriallevel.osmium_stick": "Осмиевая палка",
   "item.industriallevel.osmium_nugget": "Осмиевый самородок",
   "item.industriallevel.raw_osmium": "Рудный осмий",
   "item.industriallevel.platnium_ingot": "Платиновый слиток",
-  "item.industriallevel.platnium_stick": "Платиновая палка",
   "item.industriallevel.platnium_nugget": "Платиновый самородок",
   "item.industriallevel.raw_platnium": "Рудная платина",
   "item.industriallevel.uranium_ingot": "Урановый слиток",
-  "item.industriallevel.uranium_stick": "Урановая палка",
   "item.industriallevel.uranium_nugget": "Урановый самородок",
   "item.industriallevel.raw_uranium": "Рудный уран",
   "item.industriallevel.zinc_ingot": "Цинковый слиток",
-  "item.industriallevel.zinc_stick": "Цинковая палка",
   "item.industriallevel.zinc_nugget": "Цинковый самородок",
   "item.industriallevel.raw_zinc": "Рудный цинк",
 
@@ -169,19 +158,19 @@
   "block.industriallevel.deepslate_tin_ore": "Оловоносный глубинный сланец",
   "block.industriallevel.tin_block": "Оловянный блок",
   "block.industriallevel.lead_ore": "Свинцовая руда",
-  "block.industriallevel.deepslate_lead_ore": "Свинцовоносный глубинный сланец",
+  "block.industriallevel.deepslate_lead_ore": "Свинценосный глубинный сланец",
   "block.industriallevel.lead_block": "Свинцовый блок",
   "block.industriallevel.osmium_ore": "Осмиевая руда",
   "block.industriallevel.deepslate_osmium_ore": "Осмиевоносный глубинный сланец",
   "block.industriallevel.osmium_block": "Осмиевый блок",
   "block.industriallevel.platinum_ore": "Платиновая руда",
-  "block.industriallevel.deepslate_platinum_ore": "Платиновоносный глубинный сланец",
+  "block.industriallevel.deepslate_platinum_ore": "Платиноносный глубинный сланец",
   "block.industriallevel.platinum_block": "Платиновый блок",
   "block.industriallevel.uranium_ore": "Урановая руда",
-  "block.industriallevel.deepslate_uranium_ore": "Урановоносный глубинный сланец",
+  "block.industriallevel.deepslate_uranium_ore": "Ураноносный глубинный сланец",
   "block.industriallevel.uranium_block": "Урановый блок",
   "block.industriallevel.zinc_ore": "Цинковая руда",
-  "block.industriallevel.deepslate_zinc_ore": "Цинковоносный глубинный сланец",
+  "block.industriallevel.deepslate_zinc_ore": "Цинконосный глубинный сланец",
   "block.industriallevel.zinc_block": "Цинковый блок",
 
   "itemGroup.industriallevel.classic_tab": "IndustrialLevel"
