--- a/src/main/resources/assets/industriallevel/lang/en_us.json
+++ b/src/main/resources/assets/industriallevel/lang/en_us.json
@@ -33,6 +33,8 @@
   "item.industriallevel.zinc_nugget": "Zinc Nugget",
   "item.industriallevel.raw_zinc": "Raw Zinc",
 
+  "item.industriallevel.ruby": "Ruby",
+
   "item.industriallevel.bronze_axe": "Bronze Axe",
   "item.industriallevel.bronze_hoe": "Bronze Hoe",
   "item.industriallevel.bronze_pickaxe": "Bronze Pickaxe",
@@ -88,11 +90,11 @@
   "item.industriallevel.silver_pickaxe": "Silver Pickaxe",
   "item.industriallevel.silver_shovel": "Silver Shovel",
   "item.industriallevel.silver_sword": "Silver Sword",
-  "item.industriallevel.copper_axe": "Copper Axe",
-  "item.industriallevel.copper_hoe": "Copper Hoe",
-  "item.industriallevel.copper_pickaxe": "Copper Pickaxe",
-  "item.industriallevel.copper_shovel": "Copper Shovel",
-  "item.industriallevel.copper_sword": "Copper Sword",
+  "item.industriallevel.ruby_axe": "Ruby Axe",
+  "item.industriallevel.ruby_hoe": "Ruby Hoe",
+  "item.industriallevel.ruby_pickaxe": "Ruby Pickaxe",
+  "item.industriallevel.ruby_shovel": "Ruby Shovel",
+  "item.industriallevel.ruby_sword": "Ruby Sword",
 
   "item.industriallevel.bronze_boots": "Bronze Boots",
   "item.industriallevel.bronze_leggings": "Bronze Leggings",
@@ -138,6 +140,10 @@
   "item.industriallevel.zinc_leggings": "Zinc Leggings",
   "item.industriallevel.zinc_chestplate": "Zinc Chestplate",
   "item.industriallevel.zinc_helmet": "Zinc Helmet",
+  "item.industriallevel.ruby_boots": "Ruby Boots",
+  "item.industriallevel.ruby_leggings": "Ruby Leggings",
+  "item.industriallevel.ruby_chestplate": "Ruby Chestplate",
+  "item.industriallevel.ruby_helmet": "Ruby Helmet",
 
   "block.industriallevel.titanium_ore": "Titanium Ore",
   "block.industriallevel.deepslate_titanium_ore": "Deepslate Titanium Ore",
@@ -172,6 +178,9 @@
   "block.industriallevel.zinc_ore": "Zinc Ore",
   "block.industriallevel.deepslate_zinc_ore": "Deepslate Zinc Ore",
   "block.industriallevel.zinc_block": "Zinc Block",
+  "block.industriallevel.ruby_ore": "Ruby Ore",
+  "block.industriallevel.deepslate_ruby_ore": "Deepslate Ruby Ore",
+  "block.industriallevel.ruby_block": "Ruby Block",
 
   "itemGroup.industriallevel.classic_tab": "IndustrialLevel"
 }
