--- a/src/main/resources/assets/industriallevel/lang/uk_ua.json
+++ b/src/main/resources/assets/industriallevel/lang/uk_ua.json
@@ -33,6 +33,8 @@
   "item.industriallevel.zinc_nugget": "Цинковий шматочок",
   "item.industriallevel.raw_zinc": "Рудний цинк",
 
+  "item.industriallevel.ruby": "Рубін",
+
   "item.industriallevel.bronze_axe": "Бронзовий топор",
   "item.industriallevel.bronze_hoe": "Бронзова мотика",
   "item.industriallevel.bronze_pickaxe": "Бронзова кирка",
@@ -88,6 +90,11 @@
   "item.industriallevel.silver_pickaxe": "Срібляна кирка",
   "item.industriallevel.silver_shovel": "Срібляна лопата",
   "item.industriallevel.silver_sword": "Срібляний меч",
+  "item.industriallevel.ruby_axe": "Рубіновий топор",
+  "item.industriallevel.ruby_hoe": "Рубінова мотика",
+  "item.industriallevel.ruby_pickaxe": "Рубінова кирка",
+  "item.industriallevel.ruby_shovel": "Рубінова лопата",
+  "item.industriallevel.ruby_sword": "Рубіновий меч",
 
   "item.industriallevel.bronze_boots": "Бронзові чоботі",
   "item.industriallevel.bronze_leggings": "Бронзові поножі",
@@ -126,13 +133,17 @@
   "item.industriallevel.titanium_chestplate": "Титановий нагрудник",
   "item.industriallevel.titanium_helmet": "Титановий шолом",
   "item.industriallevel.uranium_boots": "Уранові чоботі",
-  "item.industriallevel.uranium_leggings": "Ураинові поножі",
-  "item.industriallevel.uranium_chestplate": "Ураиновий нагрудник",
-  "item.industriallevel.uranium_helmet": "Ураиновий шолом",
+  "item.industriallevel.uranium_leggings": "Уранові поножі",
+  "item.industriallevel.uranium_chestplate": "Урановий нагрудник",
+  "item.industriallevel.uranium_helmet": "Урановий шолом",
   "item.industriallevel.zinc_boots": "Цинкові чоботі",
   "item.industriallevel.zinc_leggings": "Цинкові поножі",
   "item.industriallevel.zinc_chestplate": "Цинковий нагрудник",
   "item.industriallevel.zinc_helmet": "Цинковий шолом",
+  "item.industriallevel.ruby_boots": "Рубінові чоботі",
+  "item.industriallevel.ruby_leggings": "Рубінові поножі",
+  "item.industriallevel.ruby_chestplate": "Рубіновий нагрудник",
+  "item.industriallevel.ruby_helmet": "Рубіновий шолом",
 
   "block.industriallevel.titanium_ore": "Титанова руда",
   "block.industriallevel.deepslate_titanium_ore": "Титанова руда у глубинному сланці",
@@ -167,6 +178,9 @@
   "block.industriallevel.zinc_ore": "Цинкова руда",
   "block.industriallevel.deepslate_zinc_ore": "Цинкова руда у глубинному сланці",
   "block.industriallevel.zinc_block": "Цинковий блок",
+  "block.industriallevel.ruby_ore": "Рубінова руда",
+  "block.industriallevel.deepslate_ruby_ore": "Рубінова руда у глубинному сланці",
+  "block.industriallevel.ruby_block": "Рубіновий блок",
 
   "itemGroup.industriallevel.classic_tab": "IndustrialLevel"
 }
